--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.1",
     "clsx": "^2.1.1",
     "motion": "^12.23.26",
     "next": "16.0.10",
